--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="csrf-token" content="{{ csrf_token() }}">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="The World's Most Advanced Crypto Trading Platform"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
